--- a/Lineaire_Algebra/Lineaire_Algebra.vcxproj
+++ b/Lineaire_Algebra/Lineaire_Algebra.vcxproj
@@ -20,21 +20,18 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="Coordinate.cpp" />
     <ClCompile Include="Event.cpp" />
     <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="KeyEvent.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Matrix.cpp" />
-    <ClCompile Include="Vector.cpp" />
+    <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="ApplicationListener.h" />
-    <ClInclude Include="Coordinate.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="Graph.h" />
@@ -42,6 +39,7 @@
     <ClInclude Include="KeyEvent.h" />
     <ClInclude Include="KeyListener.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
