--- a/Lineaire_Algebra/Lineaire_Algebra.vcxproj
+++ b/Lineaire_Algebra/Lineaire_Algebra.vcxproj
@@ -26,6 +26,9 @@
     <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="KeyEvent.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="Vector.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
