--- a/Lineaire_Algebra/Lineaire_Algebra.vcxproj
+++ b/Lineaire_Algebra/Lineaire_Algebra.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="Ship.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -46,6 +47,7 @@
     <ClInclude Include="RotationMatrix.h" />
     <ClInclude Include="ScalingMatrix.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="Ship.h" />
     <ClInclude Include="TranslationMatrix.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Window.h" />
