--- a/Lineaire_Algebra/Lineaire_Algebra.vcxproj
+++ b/Lineaire_Algebra/Lineaire_Algebra.vcxproj
@@ -27,7 +27,10 @@
     <ClCompile Include="KeyEvent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="Planet.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="Ship.cpp" />
+    <ClCompile Include="SpaceSimulator.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -41,9 +44,12 @@
     <ClInclude Include="KeyEvent.h" />
     <ClInclude Include="KeyListener.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Planet.h" />
     <ClInclude Include="RotationMatrix.h" />
     <ClInclude Include="ScalingMatrix.h" />
     <ClInclude Include="Shape.h" />
+    <ClInclude Include="Ship.h" />
+    <ClInclude Include="SpaceSimulator.h" />
     <ClInclude Include="TranslationMatrix.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Window.h" />
